Stop welcome text from overflowing to the home view when screen is narrower

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -649,6 +649,8 @@ ul {
     #home-page-container #welcome .text {
       margin: 62px;
       margin-top: 34px;
+      max-height: 100%;
+      overflow: scroll;
       text-align: center;
       max-width: 540px;
       color: black; }
