--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -92,6 +92,8 @@
         .text {
             margin: 62px;
             margin-top: $navHeight;
+            max-height: 100%;
+            overflow: scroll;
             text-align: center;
             max-width: 540px;
             color: black;
